# rust-actix-web-chat-server

./: Cargo.toml
src/: lib.rs  main.rs
static/: index.html
